--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -37,8 +37,8 @@ comments: false
                 
             </div>
             <div class="col-md-9">
-                <h3>{{ author[1].display_name }}</h3>
-                <p class="mt-3 mb-0">{{ author[1].description }}</p> 
+                <h4>{{ author[1].display_name }}</h4>
+                <p class="mt-3 mb-0" style="font-size: 90%">{{ author[1].description }}</p> 
             </div>
         </div> 
     </div>    
