--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -15,48 +15,43 @@ comments: false
                 {% else %}
                 <img  class="author-thumb" src="{{site.baseurl}}/{{ author[1].avatar }}" alt="{{ author.display_name }}">
                 {% endif %}
-
-                <p class="mt-4 mb-0 small text-center">
-                    {% if author[1].email %}
-                        <a class="d-inline-block mx-1 text-dark" href="mailto:{{ author[1].email }}">
-                            <span style="color:#616A6B;">
-                                <i class="fa fa-envelope"></i>
+                <!-- <div>
+                    <p class="mt-4 mb-0 small text-center">
+                        {% if author[1].email %}
+                            <span>
+                                <a class="d-inline-block mx-1 text-dark" href="mailto:{{ author[1].email }}">
+                                    <i class="fa fa-envelope"></i>
+                                </a>
                             </span>
-                        </a>
-                    {% endif %}
-                    {% if author[1].web %}
-                        <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].web }}">
-                            <span style="color:#616A6B;">
+                        {% endif %}
+                        {% if author[1].web %}
+                            <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].web }}">
                                 <i class="fa-solid fa-window-maximize"></i>
-                            </span>
-                        </a> 
-                    {% endif %}
-                    {% if author[1].mastodon %}
-                        <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].mastodon }}">
-                            <span style="color:#616A6B;">
+                            </a> 
+                        {% endif %}
+                        {% if author[1].mastodon %}
+                            <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].mastodon }}">
                                 <i class="fa-brands fa-mastodon"></i>
-                            </span>
-                        </a>
-                    {% endif %}                    
-                    {% if author[1].twitter %}
-                        <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].twitter }}">
-                            <span style="color:#616A6B;">
+                            </a>
+                        {% endif %}                    
+                        {% if author[1].twitter %}
+                            <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].twitter }}">
                                 <i class="fa-brands fa-x-twitter"></i>
-                            </span>
-                        </a>
-                    {% endif %}
-                    {% if author[1].twitter %}
-                        <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].instagram }}">
-                            <span style="color:#616A6B;">
+                            </a>
+                        {% endif %}
+                        {% if author[1].twitter %}
+                            <a target="_blank" class="d-inline-block mx-1 text-dark" href="{{ author[1].instagram }}">
                                 <i class="fa-brands fa-square-instagram"></i>
-                            </span>
-                        </a>
-                    {% endif %}
-                </p>
+                            </a>
+                        {% endif %}
+                    </p>
+                </div> -->
             </div>
             <div class="col-md-9">
                 <h4>{{ author[1].display_name }}</h4>
-                <p class="mt-3 mb-0" style="font-size: 90%">{{ author[1].description }}</p> 
+                <span class="author-description">
+                    <p class="mt-3 mb-0">{{ author[1].description }}</p>
+                </span>
             </div>
         </div> 
     </div>    
